2026-01-18  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/tests/lj4-device-smoke-test.sh: Pass `-P
	-pletter` arguments to groff, to compel output driver to use
	U.S. letter paper format.  Fixes test failure in environments
	where this paper format is not the default.

	Fixes <https://savannah.gnu.org/bugs/?67927>.  Thanks to Bjarni
	Ingi Gislason for the report and Deri James for the analysis and
	solution.

2026-01-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	* doc/groff.texi.in:
	- Stop attempting to manually recapitulate the topology of the
	  Info node tree with arguments after the first to `@node`
	  commands; doing so is no longer required by recent versions of
	  Texinfo--thanks to Alexis Hildebrandt for bringing this to my
	  attention and providing a proof-of-concept patch--but the
	  normative topology of the directed tree is radically
	  unintuitive to me, leading me to make many errors.  It _seems_
	  like Info's idea of the node traversal strategy preferred by
	  humans is breadth-first in one direction ("Next") and
	  _depth_-first in the other ("Prev").
	- Fix erroneous menu entries.  This finishes cleaning up
	  warnings about the document's node topology from recent
	  Texinfo.

	Fixes Savannah #67838.

2026-01-16  G. Branden Robinson <g.branden.robinson@gmail.com>

	Crib gnulib's coverage generation from its "maint.mk" file.
	This way developers can run "make coverage" to produce a code
	coverage report.  Requires "lcov" package.

	* Makefile.am: Define macros `COVERAGE_CCOPTS` and
	`COVERAGE_OUT`.
	(init-coverage, build-coverage, gen-coverage, coverage): Define
	new (phony) target rules.

2026-01-18  Deri James  <deri@chuzzlewit.myzen.co.uk>

	* src/devices/gropdf/gropdf.pl (.pdf*href): For external
	hotspot links (.pdfhref W  [-D URI] [-P prefix-text] \
	[-A affixed-text] [--] [hotlink text]), if no 'hotlink text'
	is specified but an URI is given, use it as the text
	rather than 'Unknown'.
